# photon_stream

./: .gitignore  .travis.yml  README.md  requirements.txt  setup.py
photon_stream/: Event.py  EventListReader.py  Geometry.py  JsonLinesGzipReader.py  JsonLinesReader.py  ObservationInformation.py  ObservationReader.py  PhotonCluster.py  PhotonStream.py  Run.py  SimulationReader.py  SimulationTruth.py  __init__.py  _input_output.py  event.py  event_list_reader.py  finger_histogram.py  geometry.py  inspect.py  jsonl2binary.py  lowlevel.py  observation_information.py  photon_cluster.py  photon_stream.py  plot.py  representations.py  simulation_reader.py
photon_stream/binary_read_write/: PhSReader.py  _input_output.py  finalize.py
photon_stream/experimental/: PhotonStreamReader.py  README.md  __init__.py  _input_output.py  pass2.py
photon_stream/experimental/cpp_input_output/docopt/: CMakeLists.txt
photon_stream/fact/: Event.py  Geometry.py  JsonLinesGzipReader.py  PhotonCluster.py  PhotonStream_old.py  Run.py  __init__.py  finger_histogram.py  pass2.py  plot.py
photon_stream/io/: JsonLinesReader.py  README.md  __init__.py  binary.py  binary_nput.py  is_gzipped_file.py  json_line_dicts.py  json_lines.py  jsonl.py  jsonl2binary.py  magic_constants.py
photon_stream/muons/: __init__.py  detection.py  extraction.py  main.py  tools.py
photon_stream/production/: README.md  __init__.py  backup_main.py  call_ethz.txt  drs_run.py  dummy_qsub.py  ethz.py  isdc.py  main.py  make_job_list.py  observations_pass3.xml  observations_pass4.xml  pass3.xml  prepare.py  qsub.py  (+11 more)
(+122 files in other folders)
